@@ -1,3 +1,8 @@
+2004-08-27  Richard Hoelscher  <rah@rahga.com>
+
+	* src/bintree.c (bin_compare): Function assumed size of "long"
+	is 32 bits, fixed with glib. Bug #140545
+	
 2004-07-08  Paolo Borelli  <pborelli@katamail.com>
 
 	* gfx.c: harmless thinko in grid drawing.
